--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "base": "/",
+  "homepage": "https://natsuki-da.github.io/",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
